# marketing-demo

./: .gitignore  README.md  pyproject.toml
documentation/image_gen/: image_generation_process.md
documentation/voiceover/: VOICEOVER_WORKFLOW.md
marketing-agent/: .env.argolis  .env.example  .gitignore  GEMINI.md  Makefile  README.md  deployment_metadata.json  extract_characters.py  getting-started.md  pyproject.toml  test_sa_resolution.py  uv.lock.bak
marketing-agent/app/: agent.py  agent_engine_app.py  agent_factory.py  campaign_utils.py  config.py  generate_campaigns.py  generate_display_ad.py  prompt.md  prompt.template.md  schema.py  state.py  tools_campaign.py  tools_media.py  tools_misc.py  tools_slidecast.py  utils_gcs.py  utils_media.py
marketing-agent/app/.adk/: session.db
marketing-agent/app/ads_agent/: .env-template
marketing-agent/app/app_utils/: deploy.py  feedback.py  install_uv.sh  onboard_brand.py  telemetry.py
marketing-agent/app/data/: website_kb.json
marketing-agent/app/legacy/: legacy_adk_utils.py  legacy_campaign_utils.py  legacy_tools_slidecast.py  tools_campaign.py  tools_media.py
marketing-agent/app/mcp/: assets.py  misc.py  production.py  schemas.py  server.py  slidecast.py  storyboard.py
marketing-agent/app/mcp_server/: assets.py  misc.py  production.py  schemas.py  server.py  slidecast.py  storyboard.py
marketing-agent/app/shared_infra/: utils_media.py
marketing-agent/app/sub_agents/: trend_spotter.py
plan_artifact/: mcpify-video-tools.md
shared_infra/: pyproject.toml
shared_infra/shared_infra/: utils_media.py
(+91 files in other folders)
