[project]
name = "shared_infra"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-texttospeech>=2.16.0",
    "google-genai>=0.1.0",
    "google-cloud-aiplatform>=1.130.0",
    "moviepy>=1.0.3",
    "imageio-ffmpeg>=0.4.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"